// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failure() should fail 1`] = `
Object {
  "errors": Array [],
  "message": "Should always fail",
  "path": Array [],
  "value": 1,
}
`;

exports[`failure() should support custom message 1`] = `
Object {
  "errors": Array [],
  "message": "Custom message",
  "path": Array [],
  "value": null,
}
`;
